// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Services component should render as expected 1`] = `
<div>
  <h2
    className="title"
  >
    A service
  </h2>
  <h4
    className="subtitle"
  />
</div>
`;

exports[`Services component should render as expected 2`] = `
<div>
  <h2
    className="title"
  >
    <Link
      replace={false}
      to="/services/undefined"
    >
      A service
    </Link>
  </h2>
  <h4
    className="subtitle"
  />
</div>
`;
